# game-template

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  Makefile  README.md  main  main.cpp
F/: CMakeLists.txt
app/: main.cpp
assets/maps/: map1.lua
cmake/: AppIcon.icns  Info.plist  Info.plist.in  libSDL2-2.0.dylib  start.sh.in
include/project/: gd.hpp
scripts/: main.lua  sibling.lua
src/: ECS.hpp  Game.cpp  Game.hpp  Map.cpp  Map.hpp  TextureManager.cpp  TextureManager.hpp  gd.cpp  main.cpp
src/Components/: Components.hpp  Idle.hpp  Position.hpp  Sprite.hpp
src/ECS/: ECS.h  Entity.h
src/F/: f.cpp
src/GameState/: GameState.hpp  IntroState.cpp  MainMenuState.cpp
src/Systems/: IdleSystem.cpp  System.hpp
test/: main_test.cpp
